--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no tests specified\\\" && exit 1"
+    "test": "jest",
+    "test:w": "jest --watch",
+    "format": "npx prettier --write ."
   },
   "keywords": [],
   "author": "",
