--- a/.github/workflows/score-password.yml
+++ b/.github/workflows/score-password.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Score Password tests
 
 # Trigger the workflow on every push or pull request to the main branch
 on:
@@ -31,4 +31,3 @@ jobs:
       # Run tests
       - name: Run tests
         run: npm test npm test -- tests/score-password.test.ts
-
